# nao-emotional-framework

./: .gitignore  CMakeLists.txt  README.md  animated-speech.cpp  animated-speech.h  emotion.cpp  emotion.h  leds.cpp  leds.h  main.cpp  make-local.sh  make-remote.sh  motion.cpp  motion.h  qiproject.xml  tts.cpp  tts.h
choreographe/box-library/: emotional-boxes.cbl
choreographe/demo/emotional-framework-demo/: emotional-framework-demo.pml  manifest.xml
choreographe/demo/emotional-framework-demo/demo/: behavior.xar
choreographe/installer/emotional-framework-installer/: emotional-framework-installer.pml  manifest.xml
choreographe/installer/emotional-framework-installer/installer/: behavior.xar
choreographe/installer/emotional-framework-installer/installer/Aldebaran/: choice_sentences.xml
python/: config.py
python_prototypes/: LEDs_eye_colour.py  VA_based_UI.py  VA_mapping_fundamentals_demo.py  emotional_demo.py  emotional_eyes_prototype.py  emotional_model_linked_VA_based_UI.py  emotional_model_linked_emotional_demo.py  emotional_motion_prototype.py  emotional_speech_prototype.py  kivy_test.py  simple_head_motion_Choregraph_export.py  standalone_emotional_demo.py
